--- a/marked-Map.html
+++ b/marked-Map.html
@@ -94,7 +94,7 @@
 						});
 			}
 
-			var imageSrc = "markerStar2.png";
+			var imageSrc = "markerStar.png";
 			var imageSize = new daum.maps.Size(24, 35);
 			var markerImage = new daum.maps.MarkerImage(imageSrc, imageSize);
 			var geocoder = new daum.maps.services.Geocoder();
