--- a/marked-Map.html
+++ b/marked-Map.html
@@ -37,7 +37,7 @@
 		}
 		
 		function clickListener(marker, markerImage, clickImage, clickList) {
-			if (clickList.indexOf(marker)){
+			if (clickList.indexOf(marker) != -1){
 				return function() {
 					clickList.delete(clickList.indexOf(marker));
 					marker.setImage(markerImage);	
