--- a/marked-Map.html
+++ b/marked-Map.html
@@ -44,7 +44,7 @@
 					marker.setImage(clickImage);
 				}
 				else {
-					clickList.delete(idx);
+					delete clickList[idx];
 					marker.setImage(markerImage);
 				}
 			};
