--- a/marked-Map.html
+++ b/marked-Map.html
@@ -44,7 +44,7 @@
 					marker.setImage(clickImage);
 				}
 				else {
-					delete clickList[idx];
+					clickList.splice(idx, 1);
 					marker.setImage(markerImage);
 				}
 			};
