--- a/marked-Map.html
+++ b/marked-Map.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Daum 지도 시작하기</title>
+	<link rel="stylesheet" href="labelbox.css">
 </head>
 <body>
 	<div id="map" style="width:60%;height:650pt;"></div>
