--- a/marked-Map.html
+++ b/marked-Map.html
@@ -104,7 +104,8 @@
 					data.push(lines[i][j]);
 				}
 				positions.push({
-							content: "<div class ='label'><span class='center'>"+ data[1] + "</span></div>",
+							content: "<div class ='label'><span class='left'></span><span class='center'>"
+					+ data[1] + "</span><span class='right'></span></div>",
 							addr: data[2]
 						});
 			}
