--- a/marked-Map.html
+++ b/marked-Map.html
@@ -127,11 +127,13 @@
 							position: coords,
 							image: markerImage
 						});
-						var infowindow = new daum.maps.InfoWindow({
-							content: positions[idx].content
+						var overlay = new daum.maps.CustomOverlay({
+							content: positions[idx].content,
+					    		map: map,
+					    		position: marker.getPosition()       
 						});
-						daum.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, infowindow));
-						daum.maps.event.addListener(marker, 'mouseout', makeOutListener(infowindow));
+						daum.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, overlay));
+						daum.maps.event.addListener(marker, 'mouseout', makeOutListener(overlay));
 						daum.maps.event.addListener(marker, 'click', clickListener(marker, markerImage, clickImage, clickList));
 					}
 					idx++;
