--- a/marked-Map.html
+++ b/marked-Map.html
@@ -132,7 +132,7 @@
 					    		map: map,
 					    		position: marker.getPosition()       
 						});
-						daum.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, overlay));
+						daum.maps.event.addListener(marker, 'mouseover', makeOverListener(map, overlay));
 						daum.maps.event.addListener(marker, 'mouseout', makeOutListener(overlay));
 						daum.maps.event.addListener(marker, 'click', clickListener(marker, markerImage, clickImage, clickList));
 					}
