--- a/marked-Map.html
+++ b/marked-Map.html
@@ -140,8 +140,8 @@
 						else {
 							event.stopPropagation();	
 						}
-						daum.maps.event.addListener(marker, 'mouseenter', makeOverListener(map, overlay));
-						daum.maps.event.addListener(marker, 'mouseleave', makeOutListener(overlay));
+						daum.maps.event.addListener(marker, 'mouseover', makeOverListener(map, overlay));
+						daum.maps.event.addListener(marker, 'mouseout', makeOutListener(overlay));
 						daum.maps.event.addListener(marker, 'click', clickListener(marker, markerImage, clickImage, clickList));
 					}
 					idx++;
