--- a/marked-Map.html
+++ b/marked-Map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Daum 지도 시작하기</title>
+	<title>PlaceMarker</title>
 	<link rel="stylesheet" href="labelbox.css">
 </head>
 <body>
