--- a/marked-Map.html
+++ b/marked-Map.html
@@ -138,7 +138,7 @@
 						var overlay = new daum.maps.CustomOverlay({
 							content: positions[idx].content,
 							map: null,
-					    		position: marker.getPosition()+(1,1)       
+					    		position: marker.getPosition()       
 						});
 						daum.maps.event.addListener(marker, 'click', clickListener(map, marker, markerImage, clickImage, overlay, clickList));
 					}
