--- a/marked-Map.html
+++ b/marked-Map.html
@@ -140,7 +140,7 @@
 					    		position: marker.getPosition()       
 						});
 						for (var j=0; j<positions.length; j++) {
-							if (positions[j].addr == result.address_name){
+							if (positions[j].addr == result[0].address_name){
 								overlay.content = positions[j].content;
 							}
 						}
