--- a/marked-Map.html
+++ b/marked-Map.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="map" style="width:60%;height:650pt;"></div>
 	<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
-	<div id="getTable" style="width:40%"></div>
+	<div id="getTable"></div>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=08129cb1b2094fd36eb2e23bd0b20804&libraries=services"></script>
 	<script>
 		var container = document.getElementById('map');
