--- a/marked-Map.html
+++ b/marked-Map.html
@@ -26,12 +26,10 @@
 		
 		var div = document.getElementById('getTable');
 		var table = document.createElement('table');
-		div.appendChild(table);
 		table.setAttribute('border', '3px');
 		var tr = document.createElement('tr');
-		table.appendChild(tr);
-		var td = document.createElement('td');
-		td.setAttribute('border-bottom', '1px solid');
+		var td1 = document.createElement('td');
+		td1.setAttribute('border-bottom', '1px solid');
 		var td2 = document.createElement('td');
 		td2.setAttribute('border-bottom', '1px solid');
 		var td3 = document.createElement('td');
@@ -46,6 +44,8 @@
 		tr.appendChild(td2);
 		tr.appendChild(td3);
 		tr.appendChild(td4);
+		table.appendChild(tr);
+		div.appendChild(table);
 		
         	function makeOverListener(marker, overlay, clickList) {
 			return function() {
