--- a/marked-Map.html
+++ b/marked-Map.html
@@ -3,12 +3,27 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>PlaceMarker</title>
-	<link rel="stylesheet" href="labelbox.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="map" style="width:60%;height:650pt;"></div>
 	<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
-	<div id="getTable"></div>
+	<table id='table1' width='400' border="1" align="center">
+		<colgroup>
+			<col width='20%' />
+			<col width='20%' />
+			<col width='20%' />
+			<col width='20%' />
+			<col width='20%' />
+		</colgroup>
+		<tr id='row1'>
+			<td align='center'> 첫번째 </td>
+			<td align='center'> 두번째 </td>
+			<td align='center'> 세번째 </td>
+			<td align='center'> 네번째 </td>
+			<td align='center'> 다섯번째 </td>
+		</tr>
+	</table>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=08129cb1b2094fd36eb2e23bd0b20804&libraries=services"></script>
 	<script>
 		var container = document.getElementById('map');
@@ -24,28 +39,6 @@
 		var zoomControl = new daum.maps.ZoomControl();
         	map.addControl(zoomControl, daum.maps.ControlPosition.RIGHT);
 		
-		var div = document.getElementById('getTable');
-		var table = document.createElement('table');
-		table.setAttribute('border', '3px');
-		var tr = document.createElement('tr');
-		var td1 = document.createElement('td');
-		td1.setAttribute('border-bottom', '1px solid');
-		var td2 = document.createElement('td');
-		td2.setAttribute('border-bottom', '1px solid');
-		var td3 = document.createElement('td');
-		td3.setAttribute('border-bottom', '1px solid');
-		var td4 = document.createElement('td');
-		td4.setAttribute('border-bottom', '1px solid');
-		td1.innerHTML = '연번';
-		td2.innerHTML = '업소명';
-		td3.innerHTML = '주소';
-		td4.innerHTML = '비고';
-		tr.appendChild(td1);
-		tr.appendChild(td2);
-		tr.appendChild(td3);
-		tr.appendChild(td4);
-		table.appendChild(tr);
-		div.appendChild(table);
 		
         	function makeOverListener(marker, overlay, clickList) {
 			return function() {
