--- a/marked-Map.html
+++ b/marked-Map.html
@@ -11,18 +11,16 @@
 		<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
 		<table id='table1' width='400' border="1" align="center">
 			<colgroup>
+				<col width='10%' />
 				<col width='20%' />
-				<col width='20%' />
-				<col width='20%' />
-				<col width='20%' />
+				<col width='50%' />
 				<col width='20%' />
 			</colgroup>
 			<tr id='row1'>
-				<td align='center'> 첫번째 </td>
-				<td align='center'> 두번째 </td>
-				<td align='center'> 세번째 </td>
-				<td align='center'> 네번째 </td>
-				<td align='center'> 다섯번째 </td>
+				<td align='center'> 연번 </td>
+				<td align='center'> 업소명 </td>
+				<td align='center'> 주소 </td>
+				<td align='center'> 비고 </td>
 			</tr>
 		</table>
 	</div>
