--- a/marked-Map.html
+++ b/marked-Map.html
@@ -9,7 +9,7 @@
 	<div id="map" style="width:60%;height:650pt;"></div>
 	<div id="info" style="width:40%;">
 		<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
-		<table id='table1' width='400' border="1" align="center">
+		<table id='list' width='100%' border="1px" align="center">
 			<colgroup>
 				<col width='10%' />
 				<col width='20%' />
