--- a/marked-Map.html
+++ b/marked-Map.html
@@ -8,7 +8,6 @@
 <body>
 	<div id="map" style="width:60%;height:650pt;"></div>
 	<div id="info" style="width:40%;">
-		<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
 		<table id='list' width='100%' border="1px" align="center">
 			<colgroup>
 				<col width='10%' />
@@ -16,13 +15,16 @@
 				<col width='50%' />
 				<col width='20%' />
 			</colgroup>
-			<tr id='row1'>
+			<tr id='row'>
 				<td align='center'> 연번 </td>
 				<td align='center'> 업소명 </td>
 				<td align='center'> 주소 </td>
 				<td align='center'> 비고 </td>
 			</tr>
 		</table>
+	</div>
+	<div id="file" style="width:100%;">
+		<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
 	</div>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=08129cb1b2094fd36eb2e23bd0b20804&libraries=services"></script>
 	<script>
