--- a/marked-Map.html
+++ b/marked-Map.html
@@ -187,7 +187,7 @@
 			}
 		}
 		
-		function delRow() {
+		function delRow(marker) {
 			var table = document.getElementById('list');
 			var rowlen = table.rows.length;
 			for (var i=1; i<rowlen; i++) {
